--- a/css/colors.css
+++ b/css/colors.css
@@ -2960,3 +2960,15 @@ html[theme*="dark"]  .tag{
     --bili-comment-tag-bg: var(--bili-comment-tag-bg-dark) !important;
     background-color: var(--bili-comment-tag-bg, ----brand_pink_thin) !important;
 }
+
+html[theme*="dark"] .header-toutu .formal-toutu{
+    opacity: 0.7;
+}
+
+html[theme*="dark"] .header .header-toutu, .header .header-upinfo-bg-shadow{
+    z-index: 1!important;
+}
+
+html[theme*="dark"] .header .header-upinfo{
+    z-index: 10;
+}
